# SelfOrganisingMaps

./: CMakeLists.txt  README.md  analysis.h  analysis.py  build_script.sh  gcal.cpp  gcal.h  general.h  model.cpp  plotPinwheelDensity.py  topo.h
configs/: al.json  config.json  gcal.json  gcl.json  genTestPatterns.py
configs/images/: genTestPatterns.py
misc/: makefileMac
models/configs/: Jinle.json  gcal.json
models/dev/: CMakeLists.txt  Jinle.cpp  antolik2011.cpp  gcalV2.cpp  gcalV2.json
models/examples/: CMakeLists.txt  README.md  stevens2013.cpp
models/examples/logs/tmp/: log.txt  measures.h5
sim/: CMakeLists.txt  gcal.cpp  gcal.h  model.cpp  topo.h  trimmed.cpp
topo/: gcal.h  general.h  topo.h
